Fix: Background lottery to Layout

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,6 +1,12 @@
 // app global css in SCSS form
 .container {
   height: 100vh;
+  &--lottery {
+    background-image: url('../assets/lottery.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
   &__card {
     min-width: 400px;
   }
